--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <h1>歡迎 {{ name }} 蒞臨</h1>
-        <h2>歡迎 {{ work }} </h2>
+        <h2>任職 {{ work }} </h2>
     </div>
 </body>
 </html>
